syntax = "proto3";

package core;

service UserService {
  rpc Create(UserCreateRequest) returns (User) {}
  rpc Get(UserGetRequest) returns (User) {}
  rpc Update(UserUpdateRequest) returns (User) {}
  rpc SetPassword(UserSetPasswordRequest) returns (Empty) {}
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
  rpc Search(SearchRequest) returns (SearchResponse) {}
  rpc Me(MeRequest) returns (User) {}
}

message Empty {}

message UserUpdateRequest {
  string screen_name = 1;
  string birth_day = 2;
  Gender gender = 3;
  string avatar_url = 4;
}

message UserSetPasswordRequest {
  string password = 1;
}

enum Gender {
  SECRET = 0;
  MALE = 1;
  FEMALE = 2;
}

message UserGetRequest {
  string id = 1;
}

message MeRequest {
}

message UserCreateRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
  string screen_name = 5;
  Gender gender = 6;
  string openid = 7;
  string birth_day = 8;
  string avatar_url = 9;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  Gender gender = 5;
  bool is_staff = 6;
  bool is_superuser = 7;
  string screen_name = 8;
  string birth_day = 9;
  string avatar_url = 10;
}

message AuthenticateRequest {
  string password = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string openid = 5;
}

message AuthenticateResponse {
  string token = 1;
}

message SearchRequest {
  string username = 1;
  string email = 2;
  string phone = 3;
  string screen_name = 4;
  int32 page = 5;
  int32 per_page = 6;
}

message SearchResponse {
  repeated User users = 1;
}

